...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--General-->
        <scene sceneID="PDb-VO-est">
            <objects>
                <viewController title="General" id="Jpn-sv-dBR" customClass="GeneralViewController" customModule="Resume" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wla-5F-RfX">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="apw-1I-oTy">
                                <rect key="frame" x="0.0" y="20" width="414" height="667"/>
...
            </objects>
            <point key="canvasLocation" x="2482.608695652174" y="-184.15178571428569"/>
        </scene>
        <!--Experience-->
        <scene sceneID="47X-QI-TkG">
            <objects>
                <viewController title="Experience" id="nm5-jE-Ypx" customClass="ExperienceViewController" customModule="Resume" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="O9s-rA-0U2">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fIN-IL-2ld">
                                <rect key="frame" x="0.0" y="116" width="414" height="571"/>
...
