...

        tableView.register(UINib(nibName: experienceCell, bundle: nil), forCellReuseIdentifier: experienceCell)
        
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 100
        
        tableView.accessibilityIdentifier = "ExperienceTable"
    }
    
    func open(url:URL?) {
        if let url = url {
            let vc = SFSafariViewController(url: url)
            present(vc, animated: true, completion: nil)
...
