...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        navBarView.accessibilityIdentifier = "GeneralNavBar"
        
        nameLabel.text = ""
        jobTitleLabel.text = ""

        profileImageHeight.constant = defaultImageHeight
        
...
